--- a/android/YogSMS/YogSMS/AndroidManifest.xml
+++ b/android/YogSMS/YogSMS/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="local.yogsms"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name"  android:debuggable="true">
         <activity android:name=".Main"
                   android:label="@string/app_name">
             <intent-filter>
@@ -12,7 +12,11 @@
             </intent-filter>
         </activity>
 
-    </application>
+    
+</application>
     <uses-sdk android:minSdkVersion="1" />
+
+<uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
+<uses-permission android:name="android.permission.READ_SMS"></uses-permission>
 
 </manifest> 
