--- a/android/YogSMS/YogSMS/AndroidManifest.xml
+++ b/android/YogSMS/YogSMS/AndroidManifest.xml
@@ -19,4 +19,6 @@
 <uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
 <uses-permission android:name="android.permission.READ_SMS"></uses-permission>
 
+
+<uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
 </manifest> 
