--- a/android/YogSMS/YogSMS/AndroidManifest.xml
+++ b/android/YogSMS/YogSMS/AndroidManifest.xml
@@ -4,8 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name"  android:debuggable="true">
-        <activity android:name=".Main"
-                  android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name=".ContactList">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
