--- a/android/YogSMS/YogSMS/AndroidManifest.xml
+++ b/android/YogSMS/YogSMS/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     
 </application>
-    <uses-sdk android:minSdkVersion="1" />
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="7"/>
 
 <uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
 <uses-permission android:name="android.permission.READ_SMS"></uses-permission>
